Fixing the display color and size, etc....

--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -24,12 +24,21 @@ a:hover {
 
 body {
   margin: 0;
-  display: flex;
+  /* display: flex; */
   place-items: center;
-  min-width: 320px;
+  min-width: 100%; /* 320px;*/
   min-height: 100vh;
 }
-
+.flex-body {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
@@ -66,10 +75,10 @@ button:focus-visible {
 }
 
 @media (prefers-color-scheme: light) {
-  :root {
+  /* :root {
     color: #213547;
     background-color: #ffffff;
-  }
+  } */
   a:hover {
     color: #747bff;
   }
